/*
 * This file was generated by the Gradle 'init' task.
 * This generated file contains a sample Java application project to get you started. For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.1.0/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
	// eclipse is used for nvim's jdtls to find the classpath
	id 'java'
    id 'application'
	id 'antlr'
    id 'com.diffplug.spotless' version '8.0.0'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
	flatDir {
		dirs 'libs'
	}
}

dependencies {
    // JUnit 5
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'

    // This dependency is used by the application.
    implementation libs.guava

	// Alloy Jar
	implementation fileTree(dir: 'libs', include: ['*.jar'])//name: 'org.alloytools.alloy.dist'

	// Picocli
	implementation 'info.picocli:picocli:4.7.5'

	// Antlr
	antlr "org.antlr:antlr4:4.13.2"

	// jpplib (oppen style pretty printing)
	implementation 'com.io7m.jpplib:com.io7m.jpplib.core:1.0.0'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    mainClass = 'ca.uwaterloo.watform.cli.Main'
	applicationName = 'parser'
}

jar {
	zip64 = true
    manifest {
        attributes(
                'Main-Class': application.mainClass
        )
    }
}


task releaseJar(type: Jar) {
	dependsOn 'spotlessApply' 
    archiveBaseName.set('watform-dashplus') // Name of the output file
    
    manifest {
        attributes 'Main-Class': application.mainClass
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    
    with jar 

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    zip64 = true
}

// for jdtls, gradle doesn't need this to compile
sourceSets {
    main {
        java {
            srcDirs += "$buildDir/generated-src/antlr/main"
        }
    }
}

spotless {
	java {
		googleJavaFormat('1.30.0').aosp()
        targetExclude("build/generated-src/**/*.java")
	}
}



tasks.named('generateGrammarSource') {
    outputDirectory = file("$buildDir/generated-src/antlr/main/antlr/generated")
    arguments += ["-visitor", "-no-listener"]
}

tasks.named('compileJava') {
    dependsOn tasks.named('generateGrammarSource')
	dependsOn tasks.named('spotlessApply')
}

tasks.named("processTestResources") {
    dependsOn tasks.named('generateGrammarSource')
}

tasks.named('test') {
    dependsOn tasks.named('generateGrammarSource')
    
    useJUnitPlatform()
    
    testLogging {
        showStandardStreams = true
    }

    if (project.hasProperty('stopOnFirstFail')) {
        systemProperty 'stopOnFirstFail', project.property('stopOnFirstFail').toString()
    }
}


// so build doesn't depend on test
tasks.named("check") {
    dependsOn.removeIf { it.name == "test" }
}

